# Analysis-of-Factors-Affecting-Student-Depression-Using-Demographic-Data-and-Academic-Achievement

./: README.md  pyproject.toml  student_depression.ipynb
src/code/: app.py  fnn.py  random_forest.py
