[project]
name = "UAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "thyara", email = "thyara.a6@gmail.com"},
]
dependencies = ["streamlit>=1.41.1", "tensorflow>=2.18.0", "scikit-learn>=1.6.0", "shap>=0.46.0", "matplotlib>=3.10.0", "joblib>=1.4.2", "keras>=3.7.0", "xgboost>=2.1.3"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
